--- a/src/main/resources/public/html/index.html
+++ b/src/main/resources/public/html/index.html
@@ -23,6 +23,7 @@
         <SECTION>
             <INPUT type="text" id="login_username" class="logininput" placeholder="Username" required autofocus>
             <INPUT type="password" id="login_password" class="logininput" placeholder="Password" required>
+            <LABEL id="login_label"><INPUT type="checkbox" id="remember" class="bigcheckbox"> Remember me</LABEL>
             <BUTTON id='login_button' onclick="loginController.sendForm()">Login</BUTTON>
         </SECTION>
 
