--- a/src/main/resources/public/html/links.html
+++ b/src/main/resources/public/html/links.html
@@ -52,7 +52,7 @@
                     <DIV class='selectcategory'>
                         Root: 
                         <SPAN id='new_category_selected_category' class='selectedcategory'></SPAN>
-                        <BUTTON onclick='pageController.openCategoryTab("category")'>Select category</BUTTON>
+                        <BUTTON onclick='pageController.openSelectCategoryTab("category")'>Select category</BUTTON>
                     </DIV>
                 </DIV>
                 
@@ -83,7 +83,7 @@
                     <DIV class='selectcategory'>
                         Category:
                         <SPAN id='new_link_selected_category' class='selectedcategory'></SPAN>
-                        <BUTTON onclick='pageController.openCategoryTab("link")'>Select category</BUTTON>
+                        <BUTTON onclick='pageController.openSelectCategoryTab("link")'>Select category</BUTTON>
                     </DIV>
                 </DIV>
                 
