Display Up button

--- a/src/main/resources/public/html/links.html
+++ b/src/main/resources/public/html/links.html
@@ -21,7 +21,7 @@
     </HEADER>
     
     <MAIN class="textaligncenter">
-        <DIV id='main_tab' class='cover'>
+        <DIV id='main_tab' class='cover container'>
             <SECTION id='tree_view_container'>
         
             </SECTION>
