--- a/src/main/resources/public/html/links.html
+++ b/src/main/resources/public/html/links.html
@@ -107,8 +107,8 @@
     </MAIN>
     
     <FOOTER>
-        <BUTTON onclick='pageController.showCategoryTab("new")'>New category</BUTTON>
-        <BUTTON onclick='pageController.showLinkTab("new")'>New link</BUTTON>
+        <BUTTON onclick='pageController.showCategoryTab(pageController.MODE_CREATE)'>New category</BUTTON>
+        <BUTTON onclick='pageController.showLinkTab(pageController.MODE_CREATE)'>New link</BUTTON>
         <BUTTON class='floatright' onclick='authService.logout()'>Logout</BUTTON>
     </FOOTER>
 </DIV>
