--- a/src/main/resources/public/html/links.html
+++ b/src/main/resources/public/html/links.html
@@ -8,6 +8,7 @@
     <LINK rel="stylesheet" href="/css/links/links_main.css">
     <LINK rel="stylesheet" href="/css/links/links_new.css">
     <LINK rel="stylesheet" href="/css/links/list_view.css">
+    <LINK rel="stylesheet" href="/css/links/tree_view.css">
 
     <SCRIPT src="js/common/jquery.js"></SCRIPT>
     <SCRIPT src="js/common/common_base.js"></SCRIPT>
