--- a/src/main/resources/public/html/links.html
+++ b/src/main/resources/public/html/links.html
@@ -140,6 +140,7 @@
         <BUTTON onclick='pageController.showCategoryTab(pageController.MODE_CREATE)'>New category</BUTTON>
         <BUTTON onclick='pageController.showLinkTab(pageController.MODE_CREATE)'>New link</BUTTON>
         <BUTTON class='floatright' onclick='authService.logout()'>Logout</BUTTON>
+        <BUTTON class='floatright' onclick='window.location.href = "account"'>Settings</BUTTON>
     </FOOTER>
 </DIV>
 
